Swap fstab at init if GPE
Change-Id: Ied69c3c3cb7bbfb561120862e48dfcf22458e843

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -38,6 +38,8 @@ on init
     stop ril-daemon
 
 on fs
+    chmod 755 /gpecheck.sh
+    exec /gpecheck.sh
     mount_all fstab.qcom
 
     # Keeping following partitions outside fstab file. As user may not have
