--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -28,6 +28,9 @@
 import init.qcom.usb.rc
 # import init.target.rc
 
+on early-init
+    write /sys/block/mmcblk0/queue/scheduler noop
+
 on init
     loglevel 8
 
@@ -478,6 +481,7 @@ service wifi-crda /system/bin/sh /system/etc/init.crda.sh
 
 on property:sys.boot_completed=1
     start qcom-post-boot
+    write /sys/block/mmcblk0/queue/scheduler row
 
 service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
     class late_start
