--- a/config/audio_effects.conf
+++ b/config/audio_effects.conf
@@ -9,9 +9,6 @@ libraries {
   bundle {
     path /system/lib/soundfx/libbundlewrapper.so
   }
-  cm {
-    path /system/lib/soundfx/libcyanogen-dsp.so
-  }
   reverb {
     path /system/lib/soundfx/libreverbwrapper.so
   }
@@ -58,10 +55,28 @@ libraries {
 #    }
 
 effects {
-  compression {
-    library cm
-    uuid f27317f4-c984-4de6-9a90-545759495bf2
-  }
+
+# additions for the proxy implementation
+# Proxy implementation
+  #effectname {
+    #library proxy
+    #uuid  xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+
+    # SW implemetation of the effect. Added as a node under the proxy to
+    # indicate this as a sub effect.
+      #libsw {
+         #library libSW
+         #uuid  yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy
+      #} End of SW effect
+
+    # HW implementation of the effect. Added as a node under the proxy to
+    # indicate this as a sub effect.
+      #libhw {
+         #library libHW
+         #uuid  zzzzzzzz-zzzz-zzzz-zzzz-zzzzzzzzzzzz
+      #}End of HW effect
+  #} End of effect proxy
+
   bassboost {
     library proxy
     uuid 14804144-a5ee-4d24-aa88-0002a5d5c51b
