--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -539,6 +539,8 @@ on property:init.svc.sdcard=running
     wait /mnt/shell/emulated/0 600
     mount none /mnt/shell/emulated/0 /storage/emulated/legacy bind
 
+service charger /charger
+    class charger
 
 service ssr_diag /system/bin/ssr_diag
     class late_start
@@ -549,3 +551,7 @@ service ssr_diag /system/bin/ssr_diag
 on property:persist.sys.ssr.restart_level=*
     exec /system/bin/sh /init.qcom.ssr.sh ${persist.sys.ssr.restart_level}
 
+service charger_monitor /system/bin/charger_monitor
+    user system
+    group system
+    disabled
