root: add mpdecision to system group
Change-Id: Ia59bdd13490a479856bd2b06430f8936a81e20b4

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -105,6 +105,7 @@ service time_daemon /system/bin/time_daemon
 
 service mpdecision /system/bin/mpdecision --avg_comp
    user root
+   group root system
    disabled
 
 service thermal-engine /system/bin/thermal-engine -c /etc/thermal-engine-8226.conf
